--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,25 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 #\33
-    > div
-    > div
-    > div.card-body
-    > div
-    > div:nth-child(2)
-    > div
-    > div
-    > div
-    > div.react-dropdown-select-dropdown.react-dropdown-select-dropdown-position-bottom.css-rh82gz-DropDown.e1qjn9k92 {
-    width: 300px;
+  > div
+  > div
+  > div.card-body
+  > div
+  > div:nth-child(2)
+  > div
+  > div
+  > div
+  > div.react-dropdown-select-dropdown.react-dropdown-select-dropdown-position-bottom.css-rh82gz-DropDown.e1qjn9k92 {
+  min-width: 300px;
+  z-index: 99999999;
 }
